; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_st5481_usb.c_st5481_setup_in.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_st5481_usb.c_st5481_setup_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st5481_in = type { i32, i32, i32, i32, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.usb_device* }
%struct.usb_device = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@usb_in_complete = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @st5481_setup_in(%struct.st5481_in* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.st5481_in*, align 8
  %4 = alloca %struct.usb_device*, align 8
  %5 = alloca i32, align 4
  store %struct.st5481_in* %0, %struct.st5481_in** %3, align 8
  %6 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %7 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %6, i32 0, i32 6
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.usb_device*, %struct.usb_device** %9, align 8
  store %struct.usb_device* %10, %struct.usb_device** %4, align 8
  %11 = call i32 @DBG(i32 4, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %13 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %12, i32 0, i32 5
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @GFP_KERNEL, align 4
  %16 = call i32 @kmalloc(i32 %14, i32 %15)
  %17 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %18 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 8
  %19 = load i32, i32* @ENOMEM, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %5, align 4
  %21 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %22 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 8
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %1
  br label %61

26:                                               ; preds = %1
  %27 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %28 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %27, i32 0, i32 4
  %29 = load i32, i32* %28, align 8
  %30 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %31 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %32 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %33 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %32, i32 0, i32 3
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @usb_rcvisocpipe(%struct.usb_device* %31, i32 %34)
  %36 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %37 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %40 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %43 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %46 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = mul nsw i32 %44, %47
  %49 = load i32, i32* @usb_in_complete, align 4
  %50 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %51 = call i32 @st5481_setup_isocpipes(i32 %29, %struct.usb_device* %30, i32 %35, i32 %38, i32 %41, i32 %48, i32 %49, %struct.st5481_in* %50)
  store i32 %51, i32* %5, align 4
  %52 = load i32, i32* %5, align 4
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %55

54:                                               ; preds = %26
  br label %56

55:                                               ; preds = %26
  store i32 0, i32* %2, align 4
  br label %63

56:                                               ; preds = %54
  %57 = load %struct.st5481_in*, %struct.st5481_in** %3, align 8
  %58 = getelementptr inbounds %struct.st5481_in, %struct.st5481_in* %57, i32 0, i32 2
  %59 = load i32, i32* %58, align 8
  %60 = call i32 @kfree(i32 %59)
  br label %61

61:                                               ; preds = %56, %25
  %62 = load i32, i32* %5, align 4
  store i32 %62, i32* %2, align 4
  br label %63

63:                                               ; preds = %61, %55
  %64 = load i32, i32* %2, align 4
  ret i32 %64
}

declare dso_local i32 @DBG(i32, i8*) #1

declare dso_local i32 @kmalloc(i32, i32) #1

declare dso_local i32 @st5481_setup_isocpipes(i32, %struct.usb_device*, i32, i32, i32, i32, i32, %struct.st5481_in*) #1

declare dso_local i32 @usb_rcvisocpipe(%struct.usb_device*, i32) #1

declare dso_local i32 @kfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
